--- a/NFLwebsite/index.html
+++ b/NFLwebsite/index.html
@@ -111,11 +111,11 @@
             <div class="tabs is-medium is-centered">
                 <ul>
                     <li><a
-                        href=""><b>HTML File</b></a></li>
+                        href="NFL2.html"><b>HTML File</b></a></li>
                     <li><a
-                        href=""><b>R Studio File</b></a></li>
+                        href="NFL2.Rmd"><b>R Studio File</b></a></li>
                     <li><a
-                        href=""><b>Final Report</b></a></li>
+                        href="NFL Betting Line Analysis.docx"><b>Final Report</b></a></li>
                 </ul>
             </div>
             <br>
